@@ -1194,6 +1194,65 @@ notChainable.defaultRgbForRegister = function defaultRgbForRegister( register )
 // If register hasn't changed, this is used to get it for an RGB
 // .defaultRegisterForRgb( r , g , b , [minRegister] , [maxRegister] )
 // .defaultRegisterForRgb( rgbObject , [minRegister] , [maxRegister] )
+
+// RGB euclidian coordinate distance
+notChainable.exDefaultRegisterForRgb = function defaultRegisterForRgb( r , g , b , minRegister , maxRegister )
+{
+	// Manage function arguments
+	
+	if ( typeof r === 'object' )
+	{
+		// Manage the .defaultRegisterForRgb( rgbObject , [minRegister] , [maxRegister] ) variante
+		maxRegister = b ;
+		minRegister = g ;
+		b = r.b ;
+		g = r.g ;
+		r = r.r ;
+	}
+	
+	if ( r < 0 || r > 255 || g < 0 || g > 255 || b < 0 || b > 255 ) { throw new Error( 'Bad rgb value' ) ; }
+	if ( maxRegister !== 'number' || maxRegister < 0 || maxRegister > 255 ) { maxRegister = 15 ; }
+	if ( minRegister !== 'number' || minRegister < 0 || minRegister > 255 ) { minRegister = 0 ; }
+	
+	if ( minRegister > maxRegister )
+	{
+		var tmp ;
+		tmp = maxRegister ;
+		maxRegister = minRegister ;
+		minRegister = tmp ;
+	}
+	
+	
+	// Search for the best match
+	
+	var dr , dg , db , register , diff , minDiff = Infinity ;
+	
+	for ( register = minRegister ; register <= maxRegister ; register ++ )
+	{
+		dr = Math.abs( r - this.colorRegister[ register ].r ) ;
+		dg = Math.abs( g - this.colorRegister[ register ].g ) ;
+		db = Math.abs( b - this.colorRegister[ register ].b ) ;
+		
+		//diff = dr + dg + db ;
+		diff = dr * dr + dg * dg + db * db ;
+		
+		if ( diff < minDiff )
+		{
+			minDiff = diff ;
+			minRegister = register ;
+		}
+	}
+	
+	return minRegister ;
+} ;
+
+
+
+// If register hasn't changed, this is used to get it for an RGB
+// .defaultRegisterForRgb( r , g , b , [minRegister] , [maxRegister] )
+// .defaultRegisterForRgb( rgbObject , [minRegister] , [maxRegister] )
+
+// HSL cylender coordinate distance
 notChainable.defaultRegisterForRgb = function defaultRegisterForRgb( r , g , b , minRegister , maxRegister )
 {
 	// Manage function arguments
@@ -1223,30 +1282,15 @@ notChainable.defaultRegisterForRgb = function defaultRegisterForRgb( r , g , b ,
 	
 	// Search for the best match
 	
-	var register , diff , minDiff = Infinity ;
+	// Transform HSL to cylender
 	
-	//*
-	var dr , dg , db ;
+	var x , y , z , xR , yR , zR , dx , dy , dz ,
+		registerHsl , register , diff ,
+		minDiff = Infinity , hsl = hslConverter.rgb2hsl( r , g , b ) ;
 	
-	for ( register = minRegister ; register <= maxRegister ; register ++ )
-	{
-		dr = Math.abs( r - this.colorRegister[ register ].r ) ;
-		dg = Math.abs( g - this.colorRegister[ register ].g ) ;
-		db = Math.abs( b - this.colorRegister[ register ].b ) ;
-		
-		//diff = dr + dg + db ;
-		diff = dr * dr + dg * dg + db * db ;
-		
-		if ( diff < minDiff )
-		{
-			minDiff = diff ;
-			minRegister = register ;
-		}
-	}
-	//*/
-	
-	/*
-	var dh , ds , dl , sFactor , registerHsl , hsl = hslConverter.rgb2hsl( r , g , b ) ;
+	x = hsl.s * Math.cos( hsl.h * 2 * Math.PI ) ;
+	y = hsl.s * Math.sin( hsl.h * 2 * Math.PI ) ;
+	z = hsl.l ;
 	
 	//console.log( 'HSL:' , hsl ) ;
 	
@@ -1254,17 +1298,17 @@ notChainable.defaultRegisterForRgb = function defaultRegisterForRgb( r , g , b ,
 	{
 		registerHsl = hslConverter.rgb2hsl( this.colorRegister[ register ] ) ;
 		
+		xR = registerHsl.s * Math.cos( registerHsl.h * 2 * Math.PI ) ;
+		yR = registerHsl.s * Math.sin( registerHsl.h * 2 * Math.PI ) ;
+		zR = registerHsl.l ;
+		
 		//console.log( 'Register HSL:' , registerHsl ) ;
 		
-		dh = Math.abs( hsl.h - registerHsl.h ) ;
-		ds = Math.abs( hsl.s - registerHsl.s ) ;
-		dl = Math.abs( hsl.l - registerHsl.l ) ;
+		dx = Math.abs( x - xR ) ;
+		dy = Math.abs( y - yR ) ;
+		dz = Math.abs( z - zR ) ;
 		
-		if ( dh > 0.5 ) { dh = 1 - dh ; }
-		dh *= 2 ;
-		
-		//diff = dh + ds + dl ;
-		diff = dh * dh + ds * ds + dl * dl ;
+		diff = dx * dx + dy * dy + dz * dz ;
 		
 		//console.log( 'delta:' , dh , ds , dl , diff ) ;
 		
@@ -1274,7 +1318,6 @@ notChainable.defaultRegisterForRgb = function defaultRegisterForRgb( r , g , b ,
 			minRegister = register ;
 		}
 	}
-	//*/
 	
 	return minRegister ;
 } ;
@@ -1357,7 +1400,7 @@ notChainable.getParentTerminalInfo = function getParentTerminalInfo( callback )
 		asyncCallback( undefined , false ) ;
 	} )
 	.exec( function( error ) {
-		if ( error ) { callback( error ) ; }
+		if ( error ) { callback( error ) ; return ; }
 		callback( undefined , terminfoName , name , pid ) ;
 	} ) ;
 } ;
@@ -1370,17 +1413,25 @@ notChainable.getDetectedTerminal = function getDetectedTerminal( callback )
 	//var self = this ;
 	
 	this.getParentTerminalInfo( function( error , codename , name , pid ) {
-		if ( error ) { callback( error ) ; }
-		callback( undefined , createTerminal( {
-			stdin: process.stdin ,
-			stdout: process.stdout ,
-			stderr: process.stderr ,
-			generic: process.env.TERM ,
-			app: codename ,
-			appName: name ,
-			pid: pid ,
-			processSigwinch: true
-		} ) ) ;
+		if ( error )
+		{
+			// Do not issue error
+			//callback( error , module.exports ) ;
+			callback( undefined , module.exports ) ;
+		}
+		else
+		{
+			callback( undefined , createTerminal( {
+				stdin: process.stdin ,
+				stdout: process.stdout ,
+				stderr: process.stderr ,
+				generic: process.env.TERM ,
+				app: codename ,
+				appName: name ,
+				pid: pid ,
+				processSigwinch: true
+			} ) ) ;
+		}
 	} ) ;
 } ;
 
